auth guard handled and error auth msg displayed successfully.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="authFacade.loginFormGroup" (ngSubmit)="authFacade.signIn()">
   <h2>Sign in</h2>
   <div>
-    <label for="username">Username</label><br>
+    <label id="username" for="username">Username</label><br>
     <input type="text" formControlName="username">
     <p *ngIf="authFacade.loginFormGroup?.controls['username'].touched && authFacade.loginFormGroup?.controls['username'].errors">This field is required...</p>
   </div>
@@ -9,7 +9,7 @@
   <pre></pre>
 
   <div>
-    <label for="password">Password</label><br>
+    <label id="password" for="password">Password</label><br>
     <input type="password" formControlName="password">
     <p *ngIf="authFacade.loginFormGroup?.controls['password'].touched && authFacade.loginFormGroup?.controls['password'].errors">This field is required...</p>
   </div>
@@ -20,4 +20,6 @@
     <button [disabled]="!authFacade.loginFormGroup.valid" type="submit">Login</button>
   </div>
   <pre></pre>
+  <p *ngIf="!!authFacade.errorMessage">{{authFacade.errorMessage}}</p>
 </form>
+
